--- a/app/styles/blocks/header.styl
+++ b/app/styles/blocks/header.styl
@@ -37,66 +37,66 @@
       border-radius 0
 
 
-  &-gamburger
-    position relative
-    top 0px
-    right 60px
+.gamburger
+  position relative
+  top 0px
+  right 60px
+  cursor pointer
+  width 40px
+  height 26px
+  min-width 24px
+  z-index 3
+  +to-width(767px)
+    right 0px
+  // &:after
+  //   content ''
+  //   position absolute
+  //   width 70px
+  //   height 70px
+  //   border-radius 50%
+  //   background wheat
+  //   z-index -1
+  //   top -18px
+  //   left -5px
+
+  &__item
+    position absolute
+    left 0
+    top 6px
+    height 4px
+    background-color #141414
+    border-radius 3px
+    right 0
+    transition 0.3s all
+    &:nth-child(2)
+      top 15px
+      left 20px
+    &:last-child
+      top 24px
+
+  &:hover
     cursor pointer
-    width 40px
-    height 26px
-    min-width 24px
-    z-index 3
-    +to-width(767px)
-      right 0px
-    // &:after
-    //   content ''
-    //   position absolute
-    //   width 70px
-    //   height 70px
-    //   border-radius 50%
-    //   background wheat
-    //   z-index -1
-    //   top -18px
-    //   left -5px
-
-    &__item
-      position absolute
-      left 0
-      top 6px
-      height 4px
+    .header-gamburger__item
       background-color #141414
-      border-radius 3px
-      right 0
-      transition 0.3s all
-      &:nth-child(2)
-        top 15px
-        left 20px
+      &:nth-child(1)
+        right -10px
+        left 10px
       &:last-child
-        top 24px
+        right -10px
+        left 10px
 
-    &:hover
-      cursor pointer
-      .header-gamburger__item
-        background-color #141414
-        &:nth-child(1)
-          right -10px
-          left 10px
-        &:last-child
-          right -10px
-          left 10px
-
-    &.active
-      .header-gamburger__item
-        background-color #141414
-        &:nth-child(1)
-          transform rotate(-45deg)
-          left 0!important
-          right 0!important
-          top 18px
-        &:nth-child(2)
-          transform rotate(45deg)
-          left 0!important
-          right 0!important
-          top 18px
-        &:last-child
-          opacity 0
+  &.active
+    .header-gamburger__item
+      background-color #141414
+      &:nth-child(1)
+        transform rotate(-45deg)
+        left 0!important
+        right 0!important
+        top 18px
+      &:nth-child(2)
+        transform rotate(45deg)
+        left 0!important
+        right 0!important
+        top 18px
+      &:last-child
+        opacity 0
