--- a/app/templates/blocks/header.pug
+++ b/app/templates/blocks/header.pug
@@ -4,10 +4,10 @@ header.header
     a(href="/").header-logo
       img(src="assets/images/tasker-logo.png" width="140px")
     
-    .header-gamburger
-      .header-gamburger__item
-      .header-gamburger__item
-      .header-gamburger__item
+    .gamburger
+      .gamburger__item
+      .gamburger__item
+      .gamburger__item
     
     nav.nav
       ul.nav-list
